--- a/index.html
+++ b/index.html
@@ -21,8 +21,22 @@
 <body>
     <header class="bg-[#fef9c3] py-20 px-4 md:px-32  ">
             <!-- nav bar section -->
-            <nav>
-
+            <nav class=" max-w-7xl mx-auto flex  justify-between h-20">
+                <div class="w-1/2 lg:w-1/5">
+                    <img src="icons/logo.png" alt="">
+                </div>
+                <div class="flex" >
+                    <div class="flex space-x-10 hidden lg:block">
+                        <a href="#">Homw</a>
+                    <a href="#">Product</a>
+                    <a href="#">About us </a>
+                    <a href="#">Contact us</a>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6  lg:hidden ">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 1 1-3 0m3 0a1.5 1.5 0 1 0-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-9.75 0h9.75" />
+                      </svg>
+                      
+                </div>
             </nav>
             <!-- banner section  -->
             <div class=" max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center ">
